Fixed summary table alignment in list
in all browsers, including IE 11

--- a/Front-End/src/css/list.css
+++ b/Front-End/src/css/list.css
@@ -74,17 +74,10 @@ thead{
 
 .table {
     background-color: #fff;
-    border-left: 1px solid #ddd;
-/*
-    width: 99.9998%;
-    float: right;
-*/
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
-
-/*th {*/
-  /*text-align: center;*/
-/*}*/
-
 
 /* for applying #777 border to table */
 .fixed-table-container {
@@ -166,48 +159,26 @@ pre {
     text-overflow: ellipsis;
 }
 
-@media (max-width: 1300px) {
-    .table tbody {
-        left: 25%;
-    }
+.evidence_badge {
+    position: relative; 
+    padding-left: 5px; 
+    padding-bottom: 30px;
+    vertical-align: middle;
+    display: inline-block;
 }
-
-@media (min-width: 1301px) {
-    .table tbody {
-        left: 30%;
-    }
+.hidden evidence_links {
+    position: absolute; 
+    left:  0; 
+    width: 200px;
 }
-
-@media (min-width: 1900px) {
-    .table tbody {
-        left: 34%;
-    }
+.linkHtml {
+   position: relative; 
+   display: inline-block; 
 }
-
-.table tbody {
-    width: 50%;
-    }
-
-    .evidence_badge {
-        position: relative; 
-        padding-left: 5px; 
-        padding-bottom: 30px;
-        vertical-align: middle;
-        display: inline-block;
-    }
-    .hidden evidence_links {
-        position: absolute; 
-        left:  0; 
-        width: 200px;
-    }
-    .linkHtml {
-       position: relative; 
-       display: inline-block; 
-    }
-    .evidence_id {
-        position: relative; 
-       display: inline-block;     
-    }
+.evidence_id {
+    position: relative; 
+   display: inline-block;     
+}
     
    
     
